// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Meetings/Webex In-Meeting All Media 1`] = `
Array [
  <div
    className="wxc-in-meeting remote-sharing"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting remote-video-n-share"
      >
        <video
          autoPlay={true}
          className="wxc-remote-video"
          muted={true}
          playsInline={true}
        />
        <video
          autoPlay={true}
          className="wxc-remote-share"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting wxc-local-media-no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="avatar-content"
          >
            <svg
              className="placeholder placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className=""
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
        <div
          className="md-avatar md-avatar--medium wxc-old-avatar"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Audio Only 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting wxc-local-media-no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="avatar-content"
          >
            <svg
              className="placeholder placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className=""
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
        <div
          className="md-avatar md-avatar--medium wxc-old-avatar"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Connecting 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <div
          className="wxc-badge connecting-badge"
          style={Object {}}
        >
          <div
            className="wxc-spinner connecting-spinner"
            size={14}
            style={
              Object {
                "height": 14,
                "width": 14,
              }
            }
          />
          <span>
            Connecting
          </span>
        </div>
      </div>
      <div
        className="wxc-local-media local-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Local Share 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <video
          autoPlay={true}
          className="wxc-remote-video"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
      <div
        className="wxc-banner share-banner wxc-banner--top"
      >
        You're sharing your screen
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Remote Share 1`] = `
Array [
  <div
    className="wxc-in-meeting remote-sharing"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting remote-video-n-share"
      >
        <video
          autoPlay={true}
          className="wxc-remote-video"
          muted={true}
          playsInline={true}
        />
        <video
          autoPlay={true}
          className="wxc-remote-share"
          muted={true}
          playsInline={true}
        />
        <audio
          autoPlay={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting wxc-local-media-no-media"
      >
        <div
          className="wxc-avatar"
        >
          <div
            className="avatar-content"
          >
            <svg
              className="placeholder placeholder-6"
              viewBox="0 0 40 40"
            >
              <text
                x="50%"
                y="50%"
              >
                BG
              </text>
            </svg>
            <img
              alt="avatar"
              className=""
              onError={[Function]}
              src="./images/barbara.png"
            />
          </div>
        </div>
        <div
          className="md-avatar md-avatar--medium wxc-old-avatar"
          title="Barbara German"
        >
          <span
            className="md-avatar__letter"
            style={
              Object {
                "backgroundColor": "",
                "color": "",
              }
            }
          >
            BG
          </span>
          <img
            alt="Barbara German"
            className="md-avatar__img md-avatar__img--hidden"
            draggable={false}
            onError={[Function]}
            onLoad={[Function]}
            src="./images/barbara.png"
          />
        </div>
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Meetings/Webex In-Meeting Video Only 1`] = `
Array [
  <div
    className="wxc-in-meeting"
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <div
      className="media-container"
      style={
        Object {
          "maxWidth": 177.77777777777777,
        }
      }
    >
      <div
        className="wxc-remote-media remote-media-in-meeting"
      >
        <video
          autoPlay={true}
          className="wxc-remote-video"
          muted={true}
          playsInline={true}
        />
      </div>
      <div
        className="wxc-local-media local-media-in-meeting"
      >
        <video
          autoPlay={true}
          playsInline={true}
        />
      </div>
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
